# IFM

./: .gitignore  LICENSE  README.md
KsMetal.xcworkspace/: contents.xcworkspacedata
KsRenderer.xcworkspace/: contents.xcworkspacedata
KsRenderer/KsRenderer/: Info.plist
KsRenderer/KsRenderer-iOS/: KsRenderer_iOS.h
KsRenderer/KsRenderer.xcodeproj/: project.pbxproj
KsRenderer/common/: KsApplication.h  KsJpDecl.h  KsJpImp.cpp  KsRenderer.h  KsRendererEnumList.txt
KsRenderer/renderer/metal/: ArgumentMTL.h  ArgumentMTL.mm  BufferMTL.h  BufferMTL.mm  ContextMTL.h  ContextMTL.mm  DrawableMTL.h  DrawableMTL.mm  MTLTypeMapping.h  MetalInc.h  PipelineMTL.h  PipelineMTL.mm  QueueMTL.h  QueueMTL.mm  RenderPassMTL.h  RenderPassMTL.mm  ShaderModuleMTL.h  ShaderModuleMTL.mm  SwapchainMTL.h  SwapchainMTL.mm  TextureMTL.h  (+6 more)
MetalRunner/: Triangle copy-Info.plist
MetalRunner/MetalRunner/: AppDelegate.h  AppDelegate.mm  KsView.h  KsView.m  MRT.cpp  MRT.h  Triangle.h  ViewController.h  ViewController.mm  main.m
MetalRunner/MetalRunner.xcodeproj/: project.pbxproj
MetalRunner/MetalRunner/ks/: CMakeLists.txt
MetalRunner/SRPresent/: AppDelegate.h  AppDelegate.m  Info.plist  KsView.h  KsView.m  Triangle.cpp  Triangle.h  ViewController.h  ViewController.mm  main.m
common/: KsDefine.h  KsRenderer.h
renderer/metal/: BufferMTL.mm  ContextMTL.h  ContextMTL.mm  MTLTypeMapping.mm  MetalInc.h  QueueMTL.h  QueueMTL.mm  RenderPass.h  RenderPass.mm  SwapchainMTL.h  SwapchainMTL.mm  TextureMTL.h  TextureMTL.mm  ViewMTL.h  ViewMTL.mm
tutorial/swapchain & renderpass/: README.md
(+28 files in other folders)
